# intro-bioinfo-unir

./: README.md  pyproject.toml
intro_bioinfo_unir/: iab.py
notebooks/: 00-Alinhando_Sequencias.ipynb
notebooks/.ipynb_checkpoints/: 00-Alinhando_Sequencias-checkpoint.ipynb
tests/: test_intro_bioinfo_unir.py
