[tool.poetry]
name = "intro-bioinfo-unir"
version = "0.1.0"
description = ""
authors = ["fiuzatayna <taynafiuza2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
biopython = "^1.79"
scipy = "^1.8.1"
scikit-bio = "^0.5.7"
jupyterlab = "^3.4.3"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
